--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@chakra-ui/react": "^2.2.8",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@orange_digital/chakra-datepicker": "^1.0.3",
+    "chart.js": "^3.9.1",
     "framer-motion": "^7.2.0",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-chartjs-2": "^4.3.1",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5"
   }
