--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@emotion/styled": "^11.10.0",
     "@orange_digital/chakra-datepicker": "^1.0.3",
     "chart.js": "^3.9.1",
+    "chartjs-chart-geo": "^3.9.0",
     "framer-motion": "^7.2.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-select": "^5.4.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
